sync-service/3.0/support/index.md
---
title: Supported platforms
---

The following are the supported platforms for Alfresco Sync Service 3.0:

## Alfresco Content Services

| Version | Supported | Notes |
| ------- | --------- | ----- |
| Alfresco Content Services 6.0 | | Optionally with Alfresco Governance Services 3.0 |
| Alfresco Desktop Sync for Windows 1.1 or later | | |
| Alfresco Desktop Sync for Mac 1.1 or later | | |

## Java

| Version | Supported | Notes |
| ------- | --------- | ----- |
| OpenJDK 11 (64-bit) | | |
| Oracle Java 8 onwards | | |

## Message brokers

| Version | Supported | Notes |
| ------- | --------- | ----- |
| Apache ActiveMQ 5.15.6 or later | | |
| Amazon MQ | | |

## Operating systems

| Version | Supported | Notes |
| ------- | --------- | ----- |
| Window Server 2012 R2 x64 | | {::nomarkdown}Not fully tested:<ul><li>Windows Server 2016</li></ul>{:/}|
| Linux | | Tested with Red Hat Enterprise Linux 7.3 x64 {::nomarkdown}<p>Not fully tested:<ul><li>CentOS 7 x64</li><li>Ubuntu 16.04 LTS x64</li></ul></p>{:/} |

## Databases

| Version | Supported | Notes |
| ------- | --------- | ----- |
| PostgreSQL 9.4.4, PostgreSQL 10.1 | | |
| MySQL 5.7.17| | |
| Oracle 12c, 19c | | |
| Amazon Aurora MySQL | | |
