sync-service/3.3/support/index.md
---
title: Supported platforms
---

The following are the supported platforms for Alfresco Sync Service 3.3:

| Version | Notes |
| ------- | ----- |
| Alfresco Content Services 6.2 | Optionally with Alfresco Governance Services 3.2 |
| Identity Service 1.1 or later | Required for SAML authentication |
| Alfresco Desktop Sync for Windows 1.4 or later | |
| Alfresco Desktop Sync for Mac 1.4 or later | |
| | |
| **Java** |
| OpenJDK 11 (64-bit) | |
| Oracle Java 8 onwards | |
| | |
| **Message brokers** | |
| Apache ActiveMQ 5.15.8 or later | |
| Amazon MQ | |
| | |
| **Operating systems** |
| Windows Server 2012 R2 x64 | {::nomarkdown}Not fully tested:<ul><li>Windows Server 2016</li></ul>{:/}|
| Linux | Tested with Red Hat Enterprise Linux 7.3 x64 {::nomarkdown}<p>Not fully tested:<ul><li>CentOS 7 x64</li><li>Ubuntu 16.04 LTS x64</li></ul></p>{:/} |
| | |
| **Databases** | |
| PostgreSQL 11.4 | |
| MySQL 5.7.17 | |
| Oracle 12c, 19c | |
| Amazon Aurora MySQL | Using MariaDB driver |
